--- a/Smartphone Recommendation System.ipynb
+++ b/Smartphone Recommendation System.ipynb
@@ -1277,12 +1277,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ecf9f6dc",
+   "execution_count": 48,
+   "id": "f38af9ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# items.to_csv(\"items.csv\")"
+    "items.to_csv(\"items.csv\")"
    ]
   },
   {
@@ -9854,7 +9854,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fafffb90",
+   "id": "e373a743",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11631,7 +11631,7 @@
    "source": [
     "## Hybrid Recommender System\n",
     "\n",
-    "A Hybrid Recommender System combines different recommendation techniques to provide better recommendations by leveraging the strengths of each. In your case, we will combine **Content-Based Filtering** and **Knowledge-Based Filtering**.\n",
+    "A Hybrid Recommender System combines different recommendation techniques to provide better recommendations by leveraging the strengths of each. In our case, we will combine **Content-Based Filtering** and **Knowledge-Based Filtering**.\n",
     "\n",
     "* **Content-Based filtering** will be used to recommend smartphones based on features that are most relevant to the user.\n",
     "* **Knowledge-Based filtering** will apply the user’s explicit preferences (e.g., preferred brand, price, etc.).\n",
